--- a/index.html
+++ b/index.html
@@ -1,50 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
-    <title>Hayk</title>
+<html>
+	<head>
+		<link href="https://releases.transloadit.com/uppy/v3.0.1/uppy.min.css" rel="stylesheet" />
+	</head>
+	<body>
+		<div id="drag-drop-area" style="height: 300px"></div>
+		<div class="for-ProgressBar"></div>
+		<button class="upload-button" style="font-size: 30px; margin: 20px">Upload</button>
+		<div class="uploaded-files" style="margin-top: 50px">
+			<ol></ol>
+		</div>
+		<script type="module">
+			import {
+				Uppy,
+				Tus,
+				DragDrop,
+				ProgressBar,
+			} from 'https://releases.transloadit.com/uppy/v3.0.1/uppy.min.mjs';
 
-    <!-- External Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/tus-js-client@latest/dist/tus.min.js"></script>
-    <script src="./scripts/tusUpload.js"></script>
+			const uppy = new Uppy({ debug: true, autoProceed: true });
 
-    <!-- Optional Styles -->
-    <link rel="stylesheet" href="https://unpkg.com/mvp.css" />
-    <link rel="stylesheet" href="./styles/cf.css" />
-  </head>
+			const onUploadSuccess = el => (file, response) => {
+				const li = document.createElement('li');
+				const a = document.createElement('a');
+				a.href = response.uploadURL;
+				a.target = '_blank';
+				a.appendChild(document.createTextNode(file.name));
+				li.appendChild(a);
 
-  <body>
-    <center>
-      <h1>Cloudflare  Tus Uploader</h1>
-      <div class="container">
-        <form>
-          <div class="form-group">
-            <label for="file">Select Video You Want To Upload</label>
-            <input type="file" id="file" />
-          </div>
-          <button type="submit" id="upload">Upload Video With Tus</button>
-          <div id="progress-bar-container">
-            <div id="progress-bar-fill"></div>
-          </div>
-          <span id="progress-bar-percent"></span>
-        </form>
-      </div>
-    </center>
+				document.querySelector(el).appendChild(li);
+			};
 
-    <script>
-      const upload = document.getElementById("upload");
-      upload.addEventListener("click", (e) => {
-        e.preventDefault();
-        const selectFile = document.getElementById("file");
-        startUpload(
-          selectFile.files[0],
-          5 * 1024 * 1024,
-          "https://my-ts-project.tumai.workers.dev/upload"
-        );
-      });
-    </script>
-  </body>
+			uppy
+				.use(DragDrop, { target: '#drag-drop-area' })
+				.use(Tus, { endpoint: 'http://localhost:3000/courses/upload', chunkSize: 150 * 1024 * 1024 })
+				.use(ProgressBar, { target: '.for-ProgressBar', hideAfterFinish: false })
+				.on('upload-success', onUploadSuccess('.uploaded-files ol'));
+
+			const uploadBtn = document.querySelector('button.upload-button');
+			uploadBtn.addEventListener('click', () => uppy.upload());
+		</script>
+	</body>
 </html>
