--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 		<div class="uploaded-files" style="margin-top: 50px">
 			<ol></ol>
 		</div>
+		<div class="status-bar">
+			<div class="status-bar-label">0%</div>
+		</div>
 		<script type="module">
 			import {
 				Uppy,
