--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <html>
 	<head>
 		<link href="https://releases.transloadit.com/uppy/v3.0.1/uppy.min.css" rel="stylesheet" />
+		<style>
+			.status-bar{
+				width: 100%;
+				background-color: white;
+				border: 1px solid black;
+			}
+			.status-bar-label{
+				width: 0%;
+				padding: 10px;
+				transition: .3s;
+				background-color: green;
+			}
+		</style>
 	</head>
 	<body>
 		<div id="drag-drop-area" style="height: 300px"></div>
