--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
-<html>
+<!-- <html>
 	<head>
 		<link href="https://releases.transloadit.com/uppy/v3.0.1/uppy.min.css" rel="stylesheet" />
 		<style>
 			.status-bar{
 				width: 100%;
 				background-color: white;
+				padding: 2px;
 				border: 1px solid black;
 			}
 			.status-bar-label{
 				width: 0%;
-				padding: 10px;
+				padding: 10px 0;
+				text-align: center;
 				transition: .3s;
 				background-color: green;
 			}
@@ -17,14 +19,14 @@
 	</head>
 	<body>
 		<div id="drag-drop-area" style="height: 300px"></div>
-		<div class="for-ProgressBar"></div>
+		<div class="for-ProgressBar">
+
+		</div>
 		<button class="upload-button" style="font-size: 30px; margin: 20px">Upload</button>
 		<div class="uploaded-files" style="margin-top: 50px">
 			<ol></ol>
 		</div>
-		<div class="status-bar">
-			<div class="status-bar-label">0%</div>
-		</div>
+
 		<script type="module">
 			import {
 				Uppy,
@@ -51,9 +53,27 @@
 				.use(Tus, { endpoint: 'https://api.owly.network/courses/upload', chunkSize: 150 * 1024 * 1024 })
 				.use(ProgressBar, { target: '.for-ProgressBar', hideAfterFinish: false })
 				.on('upload-success', onUploadSuccess('.uploaded-files ol'));
-
+			
 			const uploadBtn = document.querySelector('button.upload-button');
 			uploadBtn.addEventListener('click', () => uppy.upload());
 		</script>
 	</body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html>
+
+<head>
+	<title>Parcel Sandbox</title>
+	<meta charset="UTF-8" />
+</head>
+
+<body>
+	<div id="app"></div>
+
+	<script src="index.js">
+	</script>
+</body>
+
 </html>
