--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <html>
+<html>
 	<head>
 		<link href="https://releases.transloadit.com/uppy/v3.0.1/uppy.min.css" rel="stylesheet" />
 		<style>
@@ -58,9 +58,9 @@
 			uploadBtn.addEventListener('click', () => uppy.upload());
 		</script>
 	</body>
-</html> -->
+</html>
 
-
+<!-- 
 <!DOCTYPE html>
 <html>
 
@@ -76,4 +76,4 @@
 	</script>
 </body>
 
-</html>
+</html> -->
